--- a/style/format.css
+++ b/style/format.css
@@ -22,18 +22,21 @@ h1 {
   margin-bottom: 30px;
   border: 2px solid green;
   border-radius: 10px;
+  padding: 10px 10px 10px 10px;
 }
 
 #navigationBlock{
 	float: left;
-	position: relative;
+	position: absolute;
 	border: 2px solid green;
   border-radius: 10px;
+  padding: 10px 10px 10px 10px;
 }
 
 #summaryBlock{
 	float: left;
-	position: relative;
+	position: absolute;
 	border: 2px solid green;
   border-radius: 10px;
+  padding: 10px 10px 10px 10px;
 }
