--- a/style/format.css
+++ b/style/format.css
@@ -24,7 +24,7 @@ h2 {
   left: 50%;
   width: 552px;
   margin-left: -280px;
-  margin-top: 50px;    
+  margin-top: 40px;    
   margin-bottom: 30px;
   border: 2px solid green;
   border-radius: 10px;
@@ -35,12 +35,16 @@ h2 {
 	float: left;
 	border: 2px solid green;
   border-radius: 10px;
+  margin-top: 40px;
+  margin-left: 20px;
   padding: 10px 10px 10px 10px;
 }
 
 #summaryBlock{
 	float: right;
 	border: 2px solid green;
+	margin-top: 40px;
+  margin-right: 20px;
   border-radius: 10px;
   padding: 10px 10px 10px 10px;
 }
