--- a/style/format.css
+++ b/style/format.css
@@ -38,6 +38,7 @@ h2 {
   border-radius: 10px;
   margin-top: 40px;
   margin-left: 20px;
+  margin-right: 20px;
   padding: 10px 10px 10px 10px;
 }
 
@@ -46,6 +47,7 @@ h2 {
 	width: 150px;
 	border: 2px solid green;
 	margin-top: 40px;
+	margin-left: 20px;
   margin-right: 20px;
   border-radius: 10px;
   padding: 10px 10px 10px 10px;
