--- a/style/format.css
+++ b/style/format.css
@@ -39,6 +39,7 @@ h2 {
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
+  position: fixed;
   padding: 10px 10px 10px 10px;
 }
 
@@ -50,5 +51,6 @@ h2 {
 	margin-left: 20px;
   margin-right: 20px;
   border-radius: 10px;
+  position: fixed;
   padding: 10px 10px 10px 10px;
 }
