--- a/style/format.css
+++ b/style/format.css
@@ -39,7 +39,7 @@ h2 {
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
-  position: fixed;
+  position: absolute;
   padding: 10px 10px 10px 10px;
 }
 
@@ -51,6 +51,6 @@ h2 {
 	margin-left: 20px;
   margin-right: 20px;
   border-radius: 10px;
-  position: fixed;
+  position: absolute;
   padding: 10px 10px 10px 10px;
 }
