--- a/style/format.css
+++ b/style/format.css
@@ -35,13 +35,13 @@ h2 {
 	width: 150px;
 	float: left;
 	border: 2px solid green;
-  border-radius: 10px;
-  margin-top: 40px;
-  margin-left: 20px;
-  margin-right: 20px;
-  position: absolute;
-  padding: 10px 10px 10px 10px;
-}
+  	border-radius: 10px;
+  	margin-top: 40px;
+  	margin-left: 20px;
+	margin-right: 20px;
+  	position: static;
+	padding: 10px 10px 10px 10px;
+}	
 
 #summaryBlock{
 	float: right;
@@ -49,8 +49,8 @@ h2 {
 	border: 2px solid green;
 	margin-top: 40px;
 	margin-left: 20px;
-  margin-right: 20px;
-  border-radius: 10px;
-  position: absolute;
-  padding: 10px 10px 10px 10px;
+  	margin-right: 20px;
+  	border-radius: 10px;
+	position: static;
+  	padding: 10px 10px 10px 10px;
 }
