--- a/style/format.css
+++ b/style/format.css
@@ -1,5 +1,5 @@
 * { 
-	margin: 0;
+        margin: 0;
 }
 html,
 body {
@@ -8,11 +8,11 @@ body {
 
 body {
   background-repeat: repeat;
-  background-color:#DAFFB5;
+  background-color:#91B585;
   background-position:center top;
   background-attachment: scroll;
-  font-family: Bookman Old Style, Book Antiqua, Times New Roman, Arial;
-  font-size: 14px;
+  font-family: 'Agency FB', 'Arial';
+  font-size: 25px;
 }
 
 h1 {
@@ -27,98 +27,101 @@ h2 {
   text-align: center;
 }
 
+li {
+  list-style-type: none;
+}
+
 .clearfooter {
 height: 330px;
 clear: both;
 }
 
 #bodyBlock{
+  width: 800px;  
   position: absolute;
   left: 50%;
-  width: 500px;
-  margin-left: -265px;
-  margin-top: 40px;    
-  margin-bottom: 30px;
-  border: 2px solid green;
-  border-radius: 10px;
+  margin-top: 40px;
+  margin-left: -400px;    
+  border: 1px dashed green;
   padding: 10px 10px 10px 10px;
 }
 
 #navigationBlock{
-	width: 150px;
-	float: left;
-	border: 2px solid green;
-  	border-radius: 10px;
-  	margin-top: 40px;
-  	margin-left: 20px;
-	margin-right: 20px;
-  	position: static;
-	padding: 10px 10px 10px 10px;
-}	
+  width: 250px;
+  height: 90%;
+  float: left;
+  background-color: white;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  position: static;
+  padding: 10px 10px 10px 10px;
+  font-color:#91B585;
+}      
 
 #summaryBlock{
-	float: right;
-	width: 150px;
-	border: 2px solid green;
-	margin-top: 40px;
-	margin-left: 20px;
-  	margin-right: 20px;
-  	border-radius: 10px;
-	position: static;
-  	padding: 10px 10px 10px 10px;
+  float: right;
+  width: 150px;
+  background-color: white;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  position: static;
+  padding: 10px 10px 10px 10px;
 }
 
 #slider {
-	/* Filler stuff for now */
-	height: 300px;
-	background-color: lightgray;
-	border: 1px solid black;
-	line-height: 300px;
-	text-align: center;
-	font-size: 18px;
-	color: black;
-	font-weight: bold;
+  /* Filler stuff for now */
+  height: 300px;
+  background-color: lightgray;
+  border: 1px solid black;
+  line-height: 300px;
+  text-align: center;
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
 }
 #header {
-	/* Filler stuff for now */
-	height: 150px;
-	line-height: 150px;
-	background-color: lightgray;
-	border: 1px solid black;
-	vertical-align: middle;
-	text-align: center;
-	font-size: 24px;
-	color: black;
-	font-weight: bold;
+        /* Filler stuff for now */
+        height: 150px;
+        line-height: 150px;
+        background-color: lightgray;
+        border: 1px solid black;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 24px;
+        color: black;
+        font-weight: bold;
 }
 #content {
-	width: 800px;
-	margin-left: auto;
-	margin-right: auto;
+        width: 800px;
+        margin-left: auto;
+        margin-right: auto;
 }
 #intro {
-	text-align: center;
+        text-align: center;
 }
 
 #footer, #push {
-	margin: 150px;
+        margin: 150px;
 }
+
 #footer {
-	/* Filler stuff for now */
-	height: 150px;
-	background-color: lightgray;
-	border: 1px solid black;
-	vertical-align: middle;
-	text-align: center;
-	font-size: 18px;
-	color: black;
-	font-weight: bold;
+        /* Filler stuff for now */
+        height: 150px;
+        background-color: lightgray;
+        border: 1px solid black;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 18px;
+        color: black;
+        font-weight: bold;
 }
 
 #container {
    min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -150px;
+        height: auto !important;
+        height: 100%;
+        margin: 0 auto -150px;
 }
-
