--- a/style/format.css
+++ b/style/format.css
@@ -87,7 +87,7 @@ clear: both;
         height: 150px;
         line-height: 150px;
         background-color: lightgray;
-        border: 1px solid black;
+        border: none;
         vertical-align: middle;
         text-align: center;
         font-size: 24px;
@@ -110,8 +110,8 @@ clear: both;
 #footer {
         /* Filler stuff for now */
         height: 150px;
-        background-color: lightgray;
-        border: 1px solid black;
+        background-color: white;
+        border: none;
         vertical-align: middle;
         text-align: center;
         font-size: 18px;
