--- a/style/format.css
+++ b/style/format.css
@@ -13,6 +13,7 @@ body {
   background-attachment: scroll;
   font-family: 'Agency FB', 'Arial';
   font-size: 25px;
+  font color: white;
 }
 
 h1 {
