--- a/style/format.css
+++ b/style/format.css
@@ -13,7 +13,7 @@ body {
   background-attachment: scroll;
   font-family: 'Agency FB', 'Arial';
   font-size: 25px;
-  font color: white;
+  color: white;
 }
 
 h1 {
@@ -118,6 +118,7 @@ clear: both;
         font-size: 18px;
         color: black;
         font-weight: bold;
+        color: #91B585;
 }
 
 #container {
