--- a/style/format.css
+++ b/style/format.css
@@ -1,8 +1,7 @@
 * { 
         margin: 0;
 }
-html,
-body {
+html, body {
    height:100%;
 }
 
@@ -17,7 +16,7 @@ body {
 }
 
 h1 {
-  color: black;
+  color: white;
   font-size: 38px;
   text-align: center;
 }
@@ -41,6 +40,7 @@ clear: both;
   width: 800px;  
   position: absolute;
   left: 50%;
+  height:90%;
   margin-top: 40px;
   margin-left: -400px;    
   border: 1px dashed green;
@@ -51,25 +51,27 @@ clear: both;
   width: 250px;
   height: 90%;
   float: left;
-  background-color: white;
-  font-size: 30px;
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
   position: static;
   padding: 10px 10px 10px 10px;
-  font-color:#91B585;
+  color:#91B585;
+  background-color: white;
+  font-size: 30px;
 }      
 
 #summaryBlock{
   float: right;
-  width: 150px;
-  background-color: white;
+  width: 200px;
+  height: 45%;
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
   position: static;
   padding: 10px 10px 10px 10px;
+  background-color: white;
+  color: #91B585;
 }
 
 #slider {
@@ -84,16 +86,16 @@ clear: both;
   font-weight: bold;
 }
 #header {
-	/* Filler stuff for now */
-	height: auto;
-	/*line-height: 150px;*/
-	background-color: lightgray;
-	border: none;
-	/*vertical-align: middle;*/
-	text-align: center;
-	font-size: 14px;
-	color: black;
-	font-weight: bold;
+  /* Filler stuff for now */
+  height: auto;
+  /*line-height: 150px;*/
+  background-color: lightgray;
+  border: none;
+  /*vertical-align: middle;*/
+  text-align: center;
+  font-size: 14px;
+  color: black;
+  font-weight: bold;
 }
 #content {
         width: 800px;
@@ -121,14 +123,15 @@ clear: both;
 }
 
 #container {
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -150px;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -150px;
 }
 
 #centerme {
-	width: 800px;
-	margin-left: auto;
-	margin-right: auto;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
