--- a/style/format.css
+++ b/style/format.css
@@ -107,9 +107,9 @@ clear: both;
         text-align: center;
 }
 
-#push {
+/*#push {
         margin: 150px;
-}
+}*/
 
 #footer {
         /* Filler stuff for now */
