--- a/style/format.css
+++ b/style/format.css
@@ -116,7 +116,8 @@ clear: both;
         position: absolute;
         width:100%;
         bottom:0;
-        height: 150px;
+        height: 100px;
+        margin-top: -100px;
         background-color: white;
         text-align: center;
         font-size: 18px;
