--- a/style/format.css
+++ b/style/format.css
@@ -113,11 +113,11 @@ clear: both;
 
 #footer {
         /* Filler stuff for now */
-        position: absolute;
-        width:100%;
-        bottom:0;
-        height: 100px;
-        margin-top: -100px;
+        clear: both;
+        position: relative;
+        z-index: 10;
+        height: 50px;
+        margin-top: -50px;
         background-color: white;
         text-align: center;
         font-size: 18px;
