--- a/style/format.css
+++ b/style/format.css
@@ -123,6 +123,7 @@ clear: both;
         font-size: 18px;
         font-weight: bold;
         color: #91B585;
+        padding:5px 5px 5px 5px;
 }
 
 #container {
