--- a/style/format.css
+++ b/style/format.css
@@ -40,7 +40,7 @@ clear: both;
   width: 800px;  
   position: absolute;
   left: 50%;
-  height:80%;
+  height:70%;
   margin-top: 40px;
   margin-left: -400px;    
   border: 1px dashed green;
@@ -49,7 +49,7 @@ clear: both;
 
 #navigationBlock{
   width: 250px;
-  height: 80%;
+  height: 70%;
   float: left;
   margin-top: 40px;
   margin-left: 20px;
@@ -120,8 +120,8 @@ clear: both;
   margin-top: -20px;
   background-color: white;
   text-align: center;
-  font-size: 18px;
-  /*font-weight: bold;*/
+  font-size: 16px;
+  font-weight: bold;
   color: #91B585;
   padding:5px 5px 5px 5px;
 }
