--- a/style/format.css
+++ b/style/format.css
@@ -61,6 +61,7 @@ clear: both;
   height:90%;
   margin-top: 40px;
   margin-left: -400px;    
+  margin-bottom: 40px;
   border: 1px dashed green;
   padding: 10px 10px 30px 10px;
 }
@@ -72,6 +73,7 @@ clear: both;
   margin-top: 40px;
   margin-left: 30px;
   margin-right: 20px;
+  margin-bottom: 40px;
   position: static;
   padding: 15px 0px 0px 0px;
   color:#91B585;
@@ -86,6 +88,7 @@ clear: both;
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 30px;
+  margin-bottom: 40px;
   position: static;
   padding: 10px 10px 10px 10px;
   background-color: white;
@@ -135,8 +138,7 @@ clear: both;
   position: relative;
   z-index: 10;
   height: 20px;
-  margin-top: -20px;
-  margin-left:20px;
+  margin-top: 0px;
   background-color: white;
   text-align: center;
   font-size: 16px;
