--- a/style/format.css
+++ b/style/format.css
@@ -120,12 +120,24 @@ clear: both;
   font-weight: bold;
 }
 #content {
-        width: 800px;
-        margin-left: auto;
-        margin-right: auto;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
+
 #intro {
-        text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 5px 5px 5px 5px;
+}
+
+#widgets {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px 5px 5px 5px;
 }
 
 /*#push {
@@ -154,6 +166,7 @@ clear: both;
   margin: 0 auto -150px;
 }
 
+/*what is this?*/
 #centerme {
   width: 800px;
   margin-left: auto;
