--- a/style/format.css
+++ b/style/format.css
@@ -58,12 +58,17 @@ clear: both;
   width: 800px;  
   position: absolute;
   left: 50%;
-  height:90%;
+  /*height:90%;
   margin-top: 40px;
   margin-left: -400px;    
-  margin-bottom: 40px;
+  margin-bottom: 40px;////////////////////////////////////////////////////////////////////////////////////*/
   border: 1px dashed green;
   padding: 10px 10px 30px 10px;
+  
+  min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -20px; /* the bottom margin is the negative value of the footer's height */
 }
 
 #leftsidebar{
@@ -140,15 +145,15 @@ clear: both;
   padding: 5px 5px 5px 5px;
 }
 
-/*#push {
-        margin: 150px;
-}*/
+#push {
+  height: 20px;
+}
 
-#footer {
+#footer{
  /* Filler stuff for now */
-  clear: both;
+  /*clear: both;
   position: relative;
-  z-index: 10;
+  z-index: 10;*/
   height: 20px;
   margin-top: 0px;
   background-color: white;
