--- a/style/format.css
+++ b/style/format.css
@@ -153,7 +153,7 @@ clear: both;
 #footer{
  /* Filler stuff for now */
   clear: both;
-  position: relative;
+  /*position: relative;*/
   z-index: 10;
   height: 20px;
   margin-top: 0px;
