--- a/style/format.css
+++ b/style/format.css
@@ -154,9 +154,9 @@ clear: both;
  /* Filler stuff for now */
   /*clear: both;*/
   position: relative;
-  z-index: 10;
+  /*z-index: 10;*/
   height: 20px;
-  margin-top: 0px;
+  margin: 0 auto;
   background-color: white;
   text-align: center;
   font-size: 16px;
