--- a/style/format.css
+++ b/style/format.css
@@ -10,7 +10,7 @@ body {
   background-color:#91B585;
   background-position:center top;
   background-attachment: scroll;
-  font-family: 'Share tech', 'Agency FB', 'Arial';
+  font-family: 'Agency FB', 'Arial';
   font-size: 25px;
   color: white;
 }
