--- a/style/format.css
+++ b/style/format.css
@@ -142,7 +142,7 @@ clear: both;
   /* Filler stuff for now */
   height: auto;
   /*line-height: 150px;*/
-  background-color: lightgray;
+  background-color: white;
   border: none;
   /*vertical-align: middle;*/
   text-align: center;
