--- a/style/slider.css
+++ b/style/slider.css
@@ -1,4 +1,3 @@
-
 #slider 	{
 	 width: 800px;
 	 margin: 20px auto; 
@@ -74,7 +73,7 @@ blockquote {
 #movers-row div a.cross-link { 
 	float: right; 
 }
-div a:hover{ 
+#thumbnails  div a:hover{ 
 	background-color: rgba(255,255,255,0);
 }
 .photo-meta-data {
