missions is coming along, faq small change
now it doesn't scroll back up to top on click for FAQ

--- a/style/format.css
+++ b/style/format.css
@@ -217,3 +217,8 @@ clear: both;
 .hiddendiv {display:none;}
 .visiblediv {display:block;}
 
+/* missions */
+.missionheading {
+  font-size: 1.25em;
+  border-bottom: 1px white solid;
+}
