--- a/style/format.css
+++ b/style/format.css
@@ -222,3 +222,7 @@ clear: both;
   font-size: 1.25em;
   border-bottom: 1px white solid;
 }
+.wordcount {
+  font-size: 0.95em;
+  padding-right:8px;
+}
