--- a/style/format.css
+++ b/style/format.css
@@ -133,7 +133,7 @@ clear: both;
 #rightsidebar{
   float: right;
   width: 200px;
-  height: 400px;
+  min-height: 400px;
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 30px;
@@ -225,4 +225,9 @@ clear: both;
 .wordcount {
   font-size: 0.95em;
   padding-right:8px;
+}
+#message {
+	text-align: center;
+	color: blue;
+	padding: 10px;
 }
