--- a/style/format.css
+++ b/style/format.css
@@ -133,7 +133,8 @@ clear: both;
 #rightsidebar{
   float: right;
   width: 200px;
-  min-height: 400px;
+  //height: 400px;
+  height: auto;
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 30px;
