--- a/style/format.css
+++ b/style/format.css
@@ -183,7 +183,7 @@ clear: both;
 }
 
 .footerspan{
-        padding-right:10px;
+	padding-right:10px;
 }
 
 #content {
@@ -192,6 +192,11 @@ clear: both;
   margin-right: auto;
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+#content h1{
+	color: white;
+  font-size: 200px;
 }
 
 #intro {
