--- a/style/format.css
+++ b/style/format.css
@@ -171,8 +171,8 @@ clear: both;
 
 #footer{
   clear: both;
-  position: absolute;
-  bottom: 0px;
+  position: relative;
+  top: 1000px;
   z-index: 10;
   height: 20px;
   background-color: white;
