--- a/style/format.css
+++ b/style/format.css
@@ -172,9 +172,10 @@ clear: both;
 #footer{
   clear: both;
   position: absolute;
-  bottom: 0px;
+  bottom: -40px;
   z-index: 10;
   height: 20px;
+  width: 100%;
   background-color: white;
   text-align: center;
   font-size: 16px;
