--- a/style/format.css
+++ b/style/format.css
@@ -181,10 +181,9 @@ clear: both;
 
 #footer{
   clear: both;
-  position: absolute;
-  bottom: 0px;
+  position: relative;
+  z-index: 10;
   height: 20px;
-  width: 100%;
   background-color: white;
   text-align: center;
   font-size: 16px;
