--- a/style/format.css
+++ b/style/format.css
@@ -165,21 +165,13 @@ clear: both;
   background-color: transparent;
 }
 
-#push {
-  width: 800px;  
-  position: absolute;
-  left: 50%;
-  height:700px;
-  margin-top: 40px;
-  margin-left: -400px;    
-  margin-bottom: 40px;
-  border: 1px dashed green;
-  padding: 10px 10px 30px 10px;
-  overflow: auto;
-  background-color: red;
-}
+/*#push {
+        margin: 150px;
+}*/
 
 #footer{
+  clear: both;
+  position: relative;
   z-index: 10;
   height: 20px;
   background-color: white;
