--- a/style/format.css
+++ b/style/format.css
@@ -189,10 +189,10 @@ clear: both;
 #content {
 	position: absolute;
   width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: -400px;
   margin-top: 40px;
   margin-bottom: 40px;
+  border: 1px dashed green;
 }
 
 #content h1{
