--- a/style/format.css
+++ b/style/format.css
@@ -189,6 +189,7 @@ clear: both;
 #content {
 	position: absolute;
   width: 800px;
+  left: 50%;
   margin-left: -400px;
   margin-top: 40px;
   margin-bottom: 40px;
