--- a/style/format.css
+++ b/style/format.css
@@ -187,13 +187,11 @@ clear: both;
 }
 
 #content {
-	position: absolute;
   width: 800px;
-  left: 50%;
-  margin-left: -400px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 40px;
   margin-bottom: 40px;
-  border: 1px dashed green;
 }
 
 #content h1{
