--- a/style/format.css
+++ b/style/format.css
@@ -63,14 +63,17 @@ clear: both;
 
 .bodyBlock{
   width: 800px;  
+  
   position: absolute;
   left: 50%;
-  height:600px;
+  min-height:600px;
   margin-top: 40px;
   margin-left: -400px;    
   margin-bottom: 40px;
+  
   border: 1px dashed green;
   padding: 10px 10px 30px 10px;
+  padding-bottom:100px;
   overflow: auto;
 }
 
