--- a/contact.css
+++ b/contact.css
@@ -18,10 +18,12 @@ border-radius: 10px;
 
 #contactus legend, h2
 {
+
    font-family : Arial, sans-serif;
    font-size: 1.3em;
    font-weight:bold;
-   color:#333;
+   /*color:#333;*/
+   
 }
 
 #contactus label
@@ -31,7 +33,7 @@ border-radius: 10px;
    font-weight: bold;
 }
 
-#contactus input[type="text"],textarea
+#contactus input[type="text"], #contactus textarea
 {
   font-family : Arial, Verdana, sans-serif;
   font-size: 0.8em;
@@ -127,7 +129,7 @@ border-radius: 10px;
 {
    font-family : Arial, sans-serif;
    font-size: 0.6em;
-   color:#333;   
+   /*color:#333;   */
 }
 
 /* spam_trap: This input is hidden. This is here to trick the spam bots*/
