--- a/style/format.css
+++ b/style/format.css
@@ -250,9 +250,8 @@ clear: both;
   font-size: 0.95em;
   padding-right:8px;
 }
-#message {
+#notification {
 	text-align: center;
-	//color: blue;
 	padding: 10px;
 }
 
