--- a/style/format.css
+++ b/style/format.css
@@ -180,7 +180,7 @@ clear: both;
 	height:700px;
 }
 .wrapmeupindex {
-	height:800px;
+	height:830px;
 }
 
 #footer{
@@ -208,9 +208,8 @@ clear: both;
   margin-bottom: 40px;
 }
 
-#content h1{
-	color: white;
-  font-size: 170px;
+#content a{
+	color: #DEFFBC;
 }
 
 #intro {
