--- a/style/format.css
+++ b/style/format.css
@@ -204,12 +204,15 @@ clear: both;
   width: 800px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 40px;
 }
 
 #content a{
 	color: #DEFFBC;
+}
+#content img{
+	margin-top: -20px;
 }
 
 #intro {
