--- a/style/slider.css
+++ b/style/slider.css
@@ -85,9 +85,10 @@ blockquote {
 	z-index: 9999;  
 }
 .photo-meta-data a {
-	font-size: 13px; 
+	font-size: 16px; 
+	font-family: sans-serif;
 	color: white;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 
