--- a/style/slider.css
+++ b/style/slider.css
@@ -16,7 +16,7 @@ blockquote {
 	padding: 0 20px;
 	margin-left: 20px;
 	margin-top: 10px; 
-	border-left: 20px solid #ccc;
+	border-left: 20px solid #8cc63f;
 	font-size: 22px; 
 	font-family: Georgia, serif; 
 	font-style: italic; 
