--- a/style/format.css
+++ b/style/format.css
@@ -115,6 +115,12 @@ clear: both;
   color: red;
 }
 
+#journalarchive{
+	width: 800px;
+	height: 200px;
+	font-size: 15px;
+}
+
 #leftsidebar{
   width: 200px;
   height: 600px;
