--- a/style/format.css
+++ b/style/format.css
@@ -116,11 +116,11 @@ clear: both;
 }
 
 #journalarchive{
-	width: 800px;
-	height: 300px;
-	font-size: 16px;
+	width: 770px;
+	height: 250px;
+	font-size: 18px;
 	overflow-y: auto;
-	border: 1px inset green;
+	border: 1px dashed green;
 }
 
 #leftsidebar{
