--- a/style/format.css
+++ b/style/format.css
@@ -121,7 +121,7 @@ clear: both;
 	font-size: 18px;
 	overflow-y: auto;
 	border: 1px dashed green;
-	padding: -20px 20px 5px 5px;
+	padding-left: 10px;
 }
 
 #leftsidebar{
