--- a/style/format.css
+++ b/style/format.css
@@ -70,7 +70,7 @@ clear: both;
   margin-left: -400px;    
   margin-bottom: 40px;
   
-  border: 1px dashed #white;
+  border: 1px dashed white;
   padding: 10px 10px 30px 10px;
   overflow-y: auto;
 }
