--- a/style/format.css
+++ b/style/format.css
@@ -197,7 +197,7 @@ clear: both;
   position: relative;
   height: 20px;
   width: 100%;
-  background-color: white;
+  background-color: lightgrey;
   text-align: center;
   font-size: 16px;
   font-weight: bold;
