--- a/style/format.css
+++ b/style/format.css
@@ -51,8 +51,8 @@ a {
 
 a:hover {
   text-decoration: none;
-  background-color: #91B585;
-  color: white;
+  background-color: #f2f2f2;
+  color: #8CC63F;
 }
 
 /*what is this?*/
@@ -122,7 +122,7 @@ clear: both;
 	overflow-y: auto;
 	border: 1px dashed white;
 	padding-left: 10px;
-	padding-bottom:10px;
+	padding-top:-10px;
 }
 
 #leftsidebar{
@@ -143,6 +143,7 @@ clear: both;
 #rightsidebar{
   float: right;
   width: 200px;
+  //height: 400px;
   height: auto;
   margin-top: 40px;
   margin-left: 20px;
