--- a/style/format.css
+++ b/style/format.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
   background-repeat: repeat;
-  background-color:#86bcc8;
+  background-color:#9bc0c8;
   background-position:center top;
   background-attachment: scroll;
   font-family: 'Agency FB', 'Share Tech', 'Arial';
