--- a/style/format.css
+++ b/style/format.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-  color: #eaffd5;
+  color: #e8ffd1;
   font-size: 28px;
   text-align: center;
 }
@@ -51,7 +51,7 @@ a {
 
 a:hover {
   text-decoration: none;
-  background-color: #f2f2f2;
+  /*background-color: #f2f2f2;*/
   color: #8CC63F;
 }
 
@@ -77,7 +77,7 @@ clear: both;
 
 .bodyBlock a{
   text-decoration: none;
-  color: #eaffd5;
+  color: #e8ffd1;
 }
 
 .bodyBlock a:hover{
