--- a/style/format.css
+++ b/style/format.css
@@ -82,7 +82,7 @@ clear: both;
 
 .bodyBlock a:hover{
   text-decoration: none;
-  color: #7aabb6;
+  color: #7fb439;
   background-color: transparent;
 }
 
