--- a/style/format.css
+++ b/style/format.css
@@ -82,7 +82,7 @@ clear: both;
 
 .bodyBlock a:hover{
   text-decoration: none;
-  color: #6f9ba5;
+  color: #658e97;
   background-color: transparent;
 }
 
