--- a/style/format.css
+++ b/style/format.css
@@ -199,8 +199,12 @@ clear: both;
 	height:850px;
 }
 
-.wrapper p{
-	font-size: 25px;
+.wrapperquote{
+	padding-top:10px;
+	padding-right:10px;
+	padding-bottom:10px;
+	padding-left:10px;
+	font-size:25px;
 }
 
 #footer{
