--- a/style/format.css
+++ b/style/format.css
@@ -199,12 +199,17 @@ clear: both;
 	height:850px;
 }
 
+.photo-meta-data{
+	font-family: 'Agency FB', 'Share Tech', 'Arial';
+	font-size: 25px;
+}
+
 .wrapperquote{
 	padding-top:10px;
 	padding-right:10px;
 	padding-bottom:10px;
 	padding-left:10px;
-	font-size:25px;
+	font-size:27px;
 }
 
 #footer{
